--- a/style.css
+++ b/style.css
@@ -59,11 +59,15 @@ h3,a {
     font-size: 25px;
     
 }
+p {
 
-p, tr, td{
     font-family: "Oswald-light";
-    
-    padding: 5% 2% 0% ; 
+}
+
+.kin_tab{
+    font-family: "Oswald-light";
+    width: 100%;
+    padding: 7% 2% 0% ; 
     
 }
 
@@ -74,9 +78,9 @@ p, tr, td{
     border-radius: 5px;
     background-color: greenyellow;
     max-width: 40%;
-    height: 60%;
+    max-height: 60%;
     align-self: center;
-    padding: 10px;
+    padding: 1%;
     margin: 1%;
     position: relative;
     top: 27%;
@@ -93,17 +97,9 @@ img {
     box-shadow: 0 0 10px black;
       
 }
-    
    
-
-
 .menu a:hover {
     text-decoration: underline;
     color: lawngreen;
-
-}
-
-table {
-    width: 100%;
 
 }
